master - completely remove proprietary parts. api reworked. gas fee etc
